fixed mobile view button overlap

--- a/site.css
+++ b/site.css
@@ -42,6 +42,7 @@ body {
 	font-size: 24px;
 	font-family: Dongle, sans-serif !important;
 	font-weight: 500;
+	text-align: center;
 }
 
 /* logo styles */
